complete security,fix minor error

--- a/luxurious_frontend/admin/team-add.html
+++ b/luxurious_frontend/admin/team-add.html
@@ -132,12 +132,13 @@
 						<div class="lh-right-tool lh-user-drop">
 							<div class="lh-hover-drop">
 								<div class="lh-hover-tool">
-									<img class="user" src="assets/img/user/1.jpg" alt="user">
+									<img class="user" id="conmeo" src="assets/img/user/1.jpg"
+										alt="user">
 								</div>
 								<div class="lh-hover-drop-panel right">
 									<div class="details">
-										<h6>Moris Waites</h6>
-										<p>moris@example.com</p>
+										<h6 id="userName">Moris Waites</h6>
+										<p id="userEmail">moris@example.com</p>
 									</div>
 									<ul class="border-top">
 										<li><a href="team-profile.html">Profile</a></li>
@@ -146,7 +147,8 @@
 										<li><a href="team-update.html">Settings</a></li>
 									</ul>
 									<ul class="border-top">
-										<li><a href="signin.html"><i class="ri-logout-circle-r-line"></i>Logout</a></li>
+										<li><a href="signin.html"><i
+													class="ri-logout-circle-r-line"></i>Logout</a></li>
 									</ul>
 								</div>
 							</div>
@@ -994,6 +996,7 @@
 	<script src="assets/js/main.js"></script>
 	<script src="js/Employee.js"></script>
 	<script src="js/Role.js"></script>
+	<script src="js/authorAdmin.js"></script>
 </body>
 
 
