--- a/luxurious_frontend/admin/room-list.html
+++ b/luxurious_frontend/admin/room-list.html
@@ -183,14 +183,15 @@
                             <div class="lh-right-tool lh-user-drop">
                                 <div class="lh-hover-drop">
                                     <div class="lh-hover-tool">
-                                        <img class="user"
+                                        <img class="user" id="conmeo"
                                             src="assets/img/user/1.jpg"
                                             alt="user">
                                     </div>
                                     <div class="lh-hover-drop-panel right">
                                         <div class="details">
-                                            <h6>Moris Waites</h6>
-                                            <p>moris@example.com</p>
+                                            <h6 id="userName">Moris Waites</h6>
+                                            <p
+                                                id="userEmail">moris@example.com</p>
                                         </div>
                                         <ul class="border-top">
                                             <li><a
@@ -1068,6 +1069,7 @@
         <!-- Main Custom -->
         <script src="assets/js/main.js"></script>
         <script src="js/Rooms.js"></script>
+        <script src="js/authorAdmin.js"></script>
 
     </body>
 
