--- a/luxurious_frontend/room-2.html
+++ b/luxurious_frontend/room-2.html
@@ -37,6 +37,7 @@
         <div class="lh-loader">
             <span class="loader"></span>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
         <!-- Header -->
         <header>
@@ -313,6 +314,7 @@
         </div>
 
         <!-- Banner -->
+        <div id="AvaiRoomMess" style="display: none; color: red;"></div>
         <section class="section-banner">
             <div class="row banner-image">
                 <div class="banner-overlay"></div>
