--- a/luxurious_frontend/admin/guest-details.html
+++ b/luxurious_frontend/admin/guest-details.html
@@ -304,128 +304,136 @@
 			</div>
 		</div>
 
-		<!-- Notify sidebar -->
-		<div class="lh-notify-bar-overlay"></div>
-		<div class="lh-notify-bar">
-			<div class="lh-bar-title">
-				<h6>Notifications</h6>
-				<a href="javascript:void(0)" class="close-notify"><i class="ri-close-line"></i></a>
-			</div>
-			<div class="lh-bar-content">
-				<ul class="nav nav-tabs" id="myTab" role="tablist">
-					<li class="nav-item" role="presentation">
-						<button class="nav-link active" id="alert-tab" data-bs-toggle="tab" data-bs-target="#alert"
-							type="button" role="tab" aria-controls="alert" aria-selected="true">Alert</button>
-					</li>
-					<li class="nav-item" role="presentation">
-						<button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages"
-							type="button" role="tab" aria-controls="messages" aria-selected="false">Messages</button>
-					</li>
-				</ul>
-				<div class="tab-content" id="myTabContent">
-					<div class="tab-pane fade show active" id="alert" role="tabpanel" aria-labelledby="alert-tab">
-						<div class="lh-alert-list">
-							<ul id="notification__content">
+			<!-- Notify sidebar -->
+			<div class="lh-notify-bar-overlay"></div>
+			<div class="lh-notify-bar">
+				<div class="lh-bar-title">
+					<h6>Notifications</h6>
+					<a href="javascript:void(0)" class="close-notify"><i
+							class="ri-close-line"></i></a>
+				</div>
+				<div class="lh-bar-content">
+					<ul class="nav nav-tabs" id="myTab" role="tablist">
+						<li class="nav-item" role="presentation">
+							<button class="nav-link active" id="alert-tab" data-bs-toggle="tab"
+								data-bs-target="#alert"
+								type="button" role="tab" aria-controls="alert"
+								aria-selected="true">Alert</button>
+						</li>
+						<li class="nav-item" role="presentation">
+							<button class="nav-link" id="messages-tab" data-bs-toggle="tab"
+								data-bs-target="#messages"
+								type="button" role="tab" aria-controls="messages"
+								aria-selected="false">Messages</button>
+						</li>
+					</ul>
+					<div class="tab-content" id="myTabContent">
+						<div class="tab-pane fade show active" id="alert" role="tabpanel"
+							aria-labelledby="alert-tab">
+							<div class="lh-alert-list">
+								<ul id="notification__content">
 
-							</ul>
-							<ul>
-								<li class="check view__more"><a class="lh-primary-btn" href="#">View more</a></li>
+								</ul>
+								<ul>
+									<li class="check view__more"><a class="lh-primary-btn" href="#">View
+											more</a></li>
 
-							</ul>
+								</ul>
 
+							</div>
 						</div>
-					</div>
-					<div class="tab-pane fade" id="messages" role="tabpanel" aria-labelledby="messages-tab">
-						<div class="lh-message-list">
-							<ul>
-								<li>
-									<a href="#" class="reply">Reply</a>
-									<div class="user">
-										<img src="assets/img/user/9.jpg" alt="user">
-										<span class="label online"></span>
-									</div>
-									<div class="detail">
-										<a href="#" class="name">Boris Whisli</a>
-										<p class="time">5:30AM, Today</p>
-										<p class="message">Hello, Room 204 need to be clean.</p>
-										<span class="download-files">
-											<span class="download">
-												<img src="assets/img/room/1.png" alt="image">
-												<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
+						<div class="tab-pane fade" id="messages" role="tabpanel"
+							aria-labelledby="messages-tab">
+							<div class="lh-message-list">
+								<ul>
+									<li>
+										<a href="#" class="reply">Reply</a>
+										<div class="user">
+											<img src="assets/img/user/9.jpg" alt="user">
+											<span class="label online"></span>
+										</div>
+										<div class="detail">
+											<a href="#" class="name">Boris Whisli</a>
+											<p class="time">5:30AM, Today</p>
+											<p class="message">Hello, Room 204 need to be clean.</p>
+											<span class="download-files">
+												<span class="download">
+													<img src="assets/img/room/1.png" alt="image">
+													<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
+												</span>
+												<span class="download">
+													<img src="assets/img/room/2.png" alt="image">
+													<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
+												</span>
+												<span class="download">
+													<img src="assets/img/room/3.png" alt="image">
+													<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
+												</span>
 											</span>
-											<span class="download">
-												<img src="assets/img/room/2.png" alt="image">
-												<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
+										</div>
+									</li>
+									<li>
+										<a href="#" class="reply">Reply</a>
+										<div class="user">
+											<img src="assets/img/user/8.jpg" alt="user">
+											<span class="label offline"></span>
+										</div>
+										<div class="detail">
+											<a href="#" class="name">Frank N. Stein</a>
+											<p class="time">8:30PM, 05/12/2024</p>
+											<p class="message">Please take a look and get order from table
+												06.</p>
+										</div>
+									</li>
+									<li>
+										<a href="#" class="reply">Reply</a>
+										<div class="user">
+											<img src="assets/img/user/7.jpg" alt="user">
+											<span class="label busy"></span>
+										</div>
+										<div class="detail">
+											<a href="#" class="name">Frank N. Stein</a>
+											<p class="time">8:30PM, 05/12/2024</p>
+											<p class="message">Room 65 AC repair service is done.</p>
+											<span class="download-files">
+												<span class="download">
+													<img src="assets/img/facilities/1.png" alt="image">
+													<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
+												</span>
 											</span>
-											<span class="download">
-												<img src="assets/img/room/3.png" alt="image">
-												<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
-											</span>
-										</span>
-									</div>
-								</li>
-								<li>
-									<a href="#" class="reply">Reply</a>
-									<div class="user">
-										<img src="assets/img/user/8.jpg" alt="user">
-										<span class="label offline"></span>
-									</div>
-									<div class="detail">
-										<a href="#" class="name">Frank N. Stein</a>
-										<p class="time">8:30PM, 05/12/2024</p>
-										<p class="message">Please take a look and get order from table 06.</p>
-									</div>
-								</li>
-								<li>
-									<a href="#" class="reply">Reply</a>
-									<div class="user">
-										<img src="assets/img/user/7.jpg" alt="user">
-										<span class="label busy"></span>
-									</div>
-									<div class="detail">
-										<a href="#" class="name">Frank N. Stein</a>
-										<p class="time">8:30PM, 05/12/2024</p>
-										<p class="message">Room 65 AC repair service is done.</p>
-										<span class="download-files">
-											<span class="download">
-												<img src="assets/img/facilities/1.png" alt="image">
-												<a href="javascript:void(0)"><i class="ri-download-2-line"></i></a>
-											</span>
-										</span>
-									</div>
-								</li>
-								<li>
-									<a href="#" class="reply">Reply</a>
-									<div class="user">
-										<img src="assets/img/user/6.jpg" alt="user">
-										<span class="label busy"></span>
-									</div>
-									<div class="detail">
-										<a href="#" class="name">Paige Turner</a>
-										<p class="time">4:30PM, 12/12/2024</p>
-										<p class="message">Take a Spa trainer interview.</p>
-									</div>
-								</li>
-								<li>
-									<a href="#" class="reply">Reply</a>
-									<div class="user">
-										<img src="assets/img/user/5.jpg" alt="user">
-										<span class="label busy"></span>
-									</div>
-									<div class="detail">
-										<a href="#" class="name">Allie Grater</a>
-										<p class="time">8:30PM, 05/12/2024</p>
-										<p class="message">Take marketing module task.</p>
-									</div>
-								</li>
-								<li class="check"><a class="lh-primary-btn" href="#">View all</a></li>
-							</ul>
+										</div>
+									</li>
+									<li>
+										<a href="#" class="reply">Reply</a>
+										<div class="user">
+											<img src="assets/img/user/6.jpg" alt="user">
+											<span class="label busy"></span>
+										</div>
+										<div class="detail">
+											<a href="#" class="name">Paige Turner</a>
+											<p class="time">4:30PM, 12/12/2024</p>
+											<p class="message">Take a Spa trainer interview.</p>
+										</div>
+									</li>
+									<li>
+										<a href="#" class="reply">Reply</a>
+										<div class="user">
+											<img src="assets/img/user/5.jpg" alt="user">
+											<span class="label busy"></span>
+										</div>
+										<div class="detail">
+											<a href="#" class="name">Allie Grater</a>
+											<p class="time">8:30PM, 05/12/2024</p>
+											<p class="message">Take marketing module task.</p>
+										</div>
+									</li>
+									<li class="check"><a class="lh-primary-btn" href="#">View all</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-
 		<!-- main content -->
 		<div class="lh-main-content">
 			<div class="container-fluid">
