--- a/luxurious_frontend/admin/guest.html
+++ b/luxurious_frontend/admin/guest.html
@@ -475,6 +475,7 @@
 													<th>Email</th>
 													<th>address</th>
 													<th>Summary</th>
+													<th>Action</th>
 												</tr>
 											</thead>
 											<tbody id="list-guests">
