fix avata user, end send mail resetpass

--- a/luxurious_frontend/admin/guest.html
+++ b/luxurious_frontend/admin/guest.html
@@ -646,7 +646,7 @@
 	<script src="js/AllInfoGuest.js"></script>
 	<script src="js/go-to-page.js"></script>
 	<script src="js/guest-delete.js"></script>
-	<script src="js/guest-details.js"></script>
+	<!-- <script src="js/guest-details.js"></script> -->
 	<script src="js/authorAdmin.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
