--- a/luxurious_frontend/admin/resetpassword.html
+++ b/luxurious_frontend/admin/resetpassword.html
@@ -51,10 +51,11 @@
 												<a href="index.html"><img src="assets/img/logo/full-logo.png" alt="logo" class="logo"></a>
 											</div>
 											<div class="input-control">
-												<p>Enter your email, we will send a link to reset your password.</p>
-												<input id="email-reset" type="email" placeholder="Enter your email" name="email" required>
+												<p>Enter your new PassWord.</p>
+												<input id="enter-password" type="password" placeholder="Enter your new PassWord" name="email" required>
+												<input id="enter-password-again" type="password" placeholder="Enter your new PassWord again" name="email" required>
 												<div class="login-btns">
-													<button id="reset-password" type="submit">Reset</button>
+													<button id="enter-new-password" type="submit">Reset</button>
 												</div>
 												<div class="login-with-btns">
 													<span class="already-acc">Return to<a href="signin.html" class="login-btn">Login</a></span>
@@ -90,8 +91,7 @@
 	<script src="assets/js/vendor/date-range.js"></script>
 
 	<!-- Main Custom -->
-	<!-- <script src="assets/js/main.js"></script> -->
-	<script src="js/enter-email-resetpassword.js"></script>
+	<script src="js/confirm-resetpassword.js"></script>
 </body>
 
 
