them anh mat dinh + finish email

--- a/luxurious_frontend/admin/ResendEmail.html
+++ b/luxurious_frontend/admin/ResendEmail.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 
-<!-- Mirrored from maraviyainfotech.com/projects/luxurious-html-v22/admin/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 02 Aug 2024 09:24:41 GMT -->
+<!-- Mirrored from maraviyainfotech.com/projects/luxurious-html-v22/admin/forgot.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 02 Aug 2024 09:24:41 GMT -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,76 +39,25 @@
 	<main class="wrapper sb-default">
 		<section class="auth-section anim">
 			<div class="lh-login-page">
-				<div class="container-fluid">
+				<div class="container-fluid no-gutters">
 					<div class="row">
 						<div class="offset-lg-6 col-lg-6">
 							<div class="content-detail">
 								<div class="main-info">
 									<div class="hero-container">
-										<!-- Signup form -->
-										<form class="signup-form" method="post">
+										<!-- Forgot form -->
+										<form class="forgot-form" method="post">
 											<div class="imgcontainer">
 												<a href="index.html"><img src="assets/img/logo/full-logo.png" alt="logo" class="logo"></a>
 											</div>
 											<div class="input-control">
-												<div class="row p-l-5 p-r-5">
-													<div class="col-md-6 p-l-10 p-r-10">
-														<input type="text" placeholder="Enter First Name" id="firstname" name="uname"
-															required>
-													</div>
-													<div class="col-md-6 p-l-10 p-r-10">
-														<input type="text" placeholder="Enter Last Name" id="lastname" name="uname"
-															required>
-													</div>
-													<div class="col-md-6 p-l-10 p-r-10">
-														<input type="text" placeholder="Enter Username" id="username" name="uname"
-															required>
-													</div>
-													<div class="col-md-6 p-l-10 p-r-10">
-														<input type="email" placeholder="Enter Email" id="email" name="email"
-															required>
-													</div>
-													<div class="col-md-6 p-l-10 p-r-10">
-														<input type="text" placeholder="Enter PhoneNumber" id="PhoneNumber" name="psw"
-															class="input-checkmark" required>
-													</div>
-													
-													<div class="col-md-6 p-l-10 p-r-10">
-														<span class="password-field-show">
-															<input class="password-field input-checkmark"
-																type="password" placeholder="enter Password" id="password"
-																name="psw" required>
-															<span data-toggle=".password-field"
-																class="fa fa-fw fa-eye field-icon toggle-password"></span>
-														</span>
-													</div>
-												</div>
-												<label class="label-container">I agree with <a href="#"> privacy
-														policy</a>
-													<input type="checkbox">
-													<span class="checkmark"></span>
-												</label>
+												<p>Enter your email, we will send a link to Verify your Account.</p>
+												<input type="email" placeholder="Enter your email" id="email" name="email" required>
 												<div class="login-btns">
-													<button type="submit" id="signup">Sign up</button>
-												</div>
-												<div class="division-lines">
-													<p>or signup with</p>
+													<button type="submit" id="send">Send</button>
 												</div>
 												<div class="login-with-btns">
-													<button type="button" class="google">
-														<i class="ri-google-fill"></i>
-													</button>
-													<button type="button" class="facebook">
-														<i class="ri-facebook-fill"></i>
-													</button>
-													<button type="button" class="twitter">
-														<i class="ri-twitter-fill"></i>
-													</button>
-													<button type="button" class="linkedin">
-														<i class="ri-linkedin-fill"></i>
-													</button>
-													<span class="already-acc">Already you have an account? <a
-															href="signin.html" class="login-btn">Login</a></span>
+													<span class="already-acc">Return to<a href="signin.html" class="login-btn">Login</a></span>
 												</div>
 											</div>
 										</form>
@@ -142,9 +91,9 @@
 
 	<!-- Main Custom -->
 	<script src="assets/js/main.js"></script>
-	<script src="js/SignUp.js"></script>
+	<script src="js/Resend.js"></script>
 </body>
 
 
-<!-- Mirrored from maraviyainfotech.com/projects/luxurious-html-v22/admin/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 02 Aug 2024 09:24:41 GMT -->
+<!-- Mirrored from maraviyainfotech.com/projects/luxurious-html-v22/admin/forgot.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 02 Aug 2024 09:24:41 GMT -->
 </html>
