--- a/luxurious_frontend/admin/guest-add.html
+++ b/luxurious_frontend/admin/guest-add.html
@@ -606,7 +606,9 @@
 												</div>
 											</div>
 											<div class="col-md-6 col-sm-12">
-												<button id="guestadd-btn">Add</button>
+												<div class="lh-team-detail">
+													<button class="btn btn-primary" id="guestadd-btn">Add</button>
+												</div>
 											</div>
 										</div>
 									</div>
