--- a/luxurious_frontend/admin/index.html
+++ b/luxurious_frontend/admin/index.html
@@ -1228,8 +1228,8 @@
 	<!-- Main Custom -->
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/data/dashboard-chart-data.js"></script>
-      		<script src="js/authorAdmin.js"></script>
-
+    <script src="js/authorAdmin.js"></script>
+	<script src="assets/js/indexAdmin.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
