--- a/luxurious_frontend/admin/guest-update.html
+++ b/luxurious_frontend/admin/guest-update.html
@@ -598,7 +598,9 @@
 												</div>
 											</div>
 											<div class="col-md-6 col-sm-12">
-												<button id="guest-update-btn">Update</button>
+												<div class="lh-team-detail">
+													<button class="btn btn-primary" id="guest-update-btn">Update</button>
+												</div>
 											</div>
 										</div>
 									</div>
