--- a/luxurious_frontend/admin/index.html
+++ b/luxurious_frontend/admin/index.html
@@ -478,7 +478,7 @@
 							<a href="javascript:void(0)" title="Refresh" class="refresh"><i
 									class="ri-refresh-line"></i></a>
 							<div id="pagedate">
-								<div class="lh-date-range" title="Date">
+								<div id="dateRange" class="lh-date-range" title="Date">
 									<span></span>
 								</div>
 							</div>
@@ -505,14 +505,14 @@
 									<div class="title">
 										<div class="growth-numbers">
 											<h4>Visitor</h4>
-											<h5>698k</h5>
+											<h5 id="dashboard_visitor">698k</h5>
 										</div>
 										<span class="icon"><i class="ri-shield-user-line"></i></span>
 									</div>
-									<p class="card-groth up">
+									<p id="dashboard_visitor_growth" class="card-groth down">
 										<i class="ri-arrow-up-line"></i>
-										25%
-										<span>Last Month</span>
+										<b>25%</b>
+										<span>previous cycle</span>
 									</p>
 									<div class="mini-chart">
 										<div id="userNumbers"></div>
@@ -526,13 +526,14 @@
 									<div class="title">
 										<div class="growth-numbers">
 											<h4>Bookings</h4>
-											<h5>10.63k</h5>
+											<h5 id="dashboard_booking">10.63k</h5>
 										</div>
 										<span class="icon"><i class="ri-shopping-bag-3-line"></i>
 										</span>
 									</div>
 									<p class="card-groth down">
 										<i class="ri-arrow-down-line"></i>
+										<span id="dashboard_booking_growth"></span>
 										.5%
 										<span>Last Month</span>
 									</p>
