--- a/luxurious_frontend/admin/index.html
+++ b/luxurious_frontend/admin/index.html
@@ -509,7 +509,7 @@
 										</div>
 										<span class="icon"><i class="ri-shield-user-line"></i></span>
 									</div>
-									<p id="dashboard_visitor_growth" class="card-groth down">
+									<p id="dashboard_visitor_growth" class="card-groth up">
 										<i class="ri-arrow-up-line"></i>
 										<b>25%</b>
 										<span>previous cycle</span>
