--- a/luxurious_frontend/room-details.html
+++ b/luxurious_frontend/room-details.html
@@ -873,7 +873,7 @@
         <!-- Main-js -->
         <script src="assets/js/main.js"></script>
         <script src="assets/js/room-details.js"></script>
-        <script src="assets/js/searchavaiRoom.js"></script>
+        <!-- <script src="assets/js/searchavaiRoom.js"></script> -->
         <script src="assets/js/roomTypeDetails.js"></script>
         <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
