--- a/luxurious_frontend/admin/team-profile.html
+++ b/luxurious_frontend/admin/team-profile.html
@@ -231,7 +231,7 @@
 							<li class="lh-sb-item">
 								<a href="rooms.html" class="lh-page-link">
 									<i class="ri-home-8-line"></i><span class="condense"><span
-											class="hover-title">Rooms</span> </span>
+											class="hover-title">Rooms Status</span> </span>
 								</a>
 							</li>
 							<li class="lh-sb-item">
@@ -246,6 +246,27 @@
 											class="hover-title">Invoice</span> </span>
 								</a>
 							</li>
+
+														
+							<!-- ROOM MANAGER MENU-->
+							<li class="lh-sb-item-separator"></li>
+							<li class="lh-sb-title condense">Rooms</li>
+							<li class="lh-sb-item">
+								<a href="room-list.html" class="lh-page-link">
+									<i class="ri-group-line"></i><span class="condense"><span
+											class="hover-title">Room List</span> </span>
+								</a>
+							</li>
+							<li class="lh-sb-item">
+								<a href="room_type_mana.html" class="lh-page-link">
+									<i class="ri-user-search-line"></i><span class="condense"><span
+											class="hover-title">Room Types
+											</span> </span>
+								</a>
+							</li>
+							<!-- END ROOM MANAGER MENU -->
+
+
 							<li class="lh-sb-item-separator"></li>
 							<li class="lh-sb-title condense">Restaurant</li>
 							<li class="lh-sb-item">
