--- a/luxurious_frontend/admin/room-list.html
+++ b/luxurious_frontend/admin/room-list.html
@@ -289,7 +289,7 @@
                                 <a href="rooms.html" class="lh-page-link">
                                     <i class="ri-home-8-line"></i><span
                                         class="condense"><span
-                                            class="hover-title">Rooms</span>
+                                            class="hover-title">Rooms Status</span>
                                     </span>
                                 </a>
                             </li>
@@ -309,6 +309,27 @@
                                     </span>
                                 </a>
                             </li>
+
+                            							
+							<!-- ROOM MANAGER MENU-->
+							<li class="lh-sb-item-separator"></li>
+							<li class="lh-sb-title condense">Rooms</li>
+							<li class="lh-sb-item">
+								<a href="room-list.html" class="lh-page-link">
+									<i class="ri-group-line"></i><span class="condense"><span
+											class="hover-title">Room List</span> </span>
+								</a>
+							</li>
+							<li class="lh-sb-item">
+								<a href="room_type_mana.html" class="lh-page-link">
+									<i class="ri-user-search-line"></i><span class="condense"><span
+											class="hover-title">Room Types
+											</span> </span>
+								</a>
+							</li>
+							<!-- END ROOM MANAGER MENU -->
+
+
                             <li class="lh-sb-item-separator"></li>
                             <li class="lh-sb-title condense">Restaurant</li>
                             <li class="lh-sb-item">
