fix nhẹ frontend

--- a/luxurious_frontend/admin/guest-details.html
+++ b/luxurious_frontend/admin/guest-details.html
@@ -440,13 +440,13 @@
 				<!-- Page title & breadcrumb -->
 				<div class="lh-page-title">
 					<div class="lh-breadcrumb">
-						<h5>Guest</h5>
+						<h5>Guest</h5>						
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>Guest</li>
 						</ul>
 					</div>
-					<div class="lh-tools">
+					<!-- <div class="lh-tools">
 						<a href="javascript:void(0)" title="Refresh" class="refresh"><i class="ri-refresh-line"></i></a>
 						<div class="filter">
 							<div class="dropdown" title="Edit">
@@ -460,7 +460,7 @@
 								</ul>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				<div id="guest-details" class="row">
 					<!-- add guest-details.js -->
