--- a/luxurious_frontend/admin/guest-add.html
+++ b/luxurious_frontend/admin/guest-add.html
@@ -468,10 +468,10 @@
 					<!-- Page title & breadcrumb -->
 					<div class="lh-page-title lh-page-title-2">
 						<div class="lh-breadcrumb">
-							<h5>Add Members</h5>
+							<h5>Add Guest</h5>
 							<ul>
 								<li><a href="index.html">Luxurious</a></li>
-								<li>Team Add</li>
+								<li>Guest Add</li>
 							</ul>
 						</div>
 					</div>
@@ -505,10 +505,10 @@
 															<label for="imageUpload"></label>
 														</div>
 													</div>
-													<div class="form-group">
+													<!-- <div class="form-group">
 														<textarea class="form-control" id="profile_detail" rows="9"
 															placeholder="Enter Details"></textarea>
-													</div>
+													</div> -->
 												</div>
 											</div>
 										</div>
@@ -522,11 +522,7 @@
 											<div class="col-sm-12">
 												<h3>Guest Details</h3>
 												<div class="lh-team-detail">
-													<p>From your account you can easily view and track Deals. You can
-														manage
-														and change your account information like address, contact
-														information
-														and history of deals.</p>
+													<p>Add Customer Information.</p>
 												</div>
 											</div>
 											<div class="col-md-6 col-sm-12">
