--- a/luxurious_frontend/admin/guest-update.html
+++ b/luxurious_frontend/admin/guest-update.html
@@ -498,10 +498,10 @@
 															</div>
 														</div>
 													</div>
-													<div class="form-group">
+													<!-- <div class="form-group">
 														<textarea class="form-control" id="profile_detail" rows="9"
 															placeholder="Enter Details"></textarea>
-													</div>
+													</div> -->
 												</div>
 											</div>
 										</div>
@@ -515,11 +515,7 @@
 											<div class="col-sm-12">
 												<h3>Guest Update</h3>
 												<div class="lh-team-detail">
-													<p>From your account you can easily view and track Deals. You can
-														manage
-														and change your account information like address, contact
-														information
-														and history of deals.</p>
+													<p>Edit Customer Information.</p>
 												</div>
 											</div>
 											<div class="col-md-6 col-sm-12">
@@ -541,7 +537,7 @@
 													<h6>Date Of Birth</h6>
 													<ul>
 														<li>
-															<input id="dob" type="text" class="form-control"
+															<input id="dob" type="date" class="form-control"
 																placeholder="Enter DOB" maxlength="10">
 														</li>
 													</ul>
