fix fontend + sắp xếp code

--- a/luxurious_frontend/admin/guest-details.html
+++ b/luxurious_frontend/admin/guest-details.html
@@ -467,9 +467,9 @@
 							<li>Guest</li>
 						</ul>
 					</div>
-					<!-- <div class="lh-tools">
-						<a href="javascript:void(0)" title="Refresh" class="refresh"><i class="ri-refresh-line"></i></a>
-						<div class="filter">
+					<div class="lh-tools">
+						<a href="javascript:location.reload();" title="Refresh" class="refresh"><i class="ri-refresh-line"></i></a>
+						<!-- <div class="filter">
 							<div class="dropdown" title="Edit">
 								<button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
 									data-bs-toggle="dropdown" aria-expanded="false">
@@ -480,8 +480,8 @@
 									<li><a class="dropdown-item" href="#">Delete</a></li>
 								</ul>
 							</div>
-						</div>
-					</div> -->
+						</div> -->
+					</div>
 				</div>
 				<div id="guest-details" class="row">
 					<!-- add guest-details.js -->
