--- a/luxurious_frontend/admin/guest-update.html
+++ b/luxurious_frontend/admin/guest-update.html
@@ -489,10 +489,10 @@
 					<!-- Page title & breadcrumb -->
 					<div class="lh-page-title lh-page-title-2">
 						<div class="lh-breadcrumb">
-							<h5>Add Members</h5>
+							<h5>Update Members</h5>
 							<ul>
 								<li><a href="index.html">Luxurious</a></li>
-								<li>Team Add</li>
+								<li>Members Update</li>
 							</ul>
 						</div>
 					</div>
@@ -508,15 +508,15 @@
 														<div class="profile-img">
 															<div class="avatar-preview">
 																<div class="t-img" id="imagePreview"
-																	style="background-image: url(assets/img/user/thumb.jpg);">
+																	style="background-image: url('http://localhost:9999/file/hauchuc/client.PNG');">
 																</div>
 															</div>
 															<span class="tag-label online"></span>
-															<div class="avatar-edit">
+															<!-- <div class="avatar-edit">
 																<input type='file' id="imageUpload"
 																	accept=".png, .jpg, .jpeg">
 																<label for="imageUpload"></label>
-															</div>
+															</div> -->
 														</div>
 													</div>
 													<!-- <div class="form-group">
@@ -782,7 +782,7 @@
 	<!-- <script src="js/guest-add.js"></script> -->
 	<!-- <script src="js/get-value-guest.js"></script> -->
 	<script src="js/guest-update.js"></script>
-  		<script src="js/authorAdmin.js"></script>
+  	<script src="js/authorAdmin.js"></script>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
