--- a/luxurious_frontend/admin/guest.html
+++ b/luxurious_frontend/admin/guest.html
@@ -463,7 +463,7 @@
 						</ul>
 					</div>
 					<div class="lh-tools">
-						<a href="javascript:void(0)" title="Refresh" class="refresh"><i class="ri-refresh-line"></i></a>
+						<a href="javascript:location.reload();" title="Refresh" class="refresh"><i class="ri-refresh-line"></i></a>
 						<div class="filter">
 							<button class="btn-add btn btn-primary" type="button">
 								Add
